--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Swoosh</string>
+    <string name="background_image">Background Image</string>
+    <string name="app_logo">app logo</string>
 </resources>
