Swoosh app activity communication with data

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Swoosh</string>
     <string name="background_image">Background Image</string>
     <string name="app_logo">app logo</string>
+    <string name="search_league">Looking for a Co-ed beginner near you</string>
 </resources>
